--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "fix:hero-banner-indexes": "node scripts/fix-hero-banner-platform-indexes.js",
     "fix:hero-banner-swap": "node scripts/swap-hero-banner-platform-data.js",
     "fix:move-mogrocery-banners-to-mofood": "node scripts/move-mogrocery-banners-to-mofood.js",
-    "fix:restore-mofood-banners": "node scripts/restore-mofood-banners-from-cloudinary.js"
+    "fix:restore-mofood-banners": "node scripts/restore-mofood-banners-from-cloudinary.js",
+    "seed:grocery-plans": "node scripts/seed-grocery-plans.js"
   },
   "keywords": [
     "food-delivery",
